--- a/stylus/require/layouts.styl
+++ b/stylus/require/layouts.styl
@@ -271,13 +271,9 @@ section:nth-child(even) .wt_section-message
     template-community.php
 \*------------------------------------*/
 
-.wt_two-column-face-grid
-    display grid
-    grid-template-columns repeat(auto-fit, minmax(40rem, 1fr))
-    margin 5% 10% 10% 10%
-    grid-gap 10%
+// Setting min at 40rem overflows on mobile
 
-.wt_three-column-face-grid
+.wt_two-column-face-grid, .wt_three-column-face-grid
     display grid
     grid-template-columns repeat(auto-fit, minmax(30rem, 1fr))
     margin 5% 10% 10% 10%
